# androgen-receptor-clusters-world-map

./: .gitignore  README.md  build_streamlit_main_page.py  downloader.py  environment.yml  pyproject.toml  streamlit_main_page.py
assets/: .gitignore  download_bam_files_input_urls.txt
assets/html/: index.html
assets/js/: index.js
assets/tsv/: populations.tsv  populations_lat_long.tsv  samples.tsv
assets/txt/: download_bam_files_input_urls.txt  html_color_codes.txt
pipeline_stages/: 010_download_bam_files.py  030_fastq_to_fasta.py  040_fasta_to_txt_clustering_input.py  _010_download_bam_files.py  _020_bam_to_fastq.py  _030_fastq_to_fasta_consensus.py  _040_fasta_consensus_to_polyglutamine_exon.py  _040_fasta_to_txt.py  _040_fasta_to_txt_clustering_input.py  _050_many_txt_to_single_fasta.py  _050_multiple_fasta_to_single_multifasta.py  run_the_pipeline.py
scripts/: _015_reheader_bam_files_with_proper_tabs.py  _050_multiple_fasta_to_single_multifasta.py  _060_clustering_results_to_map_dataframes.py  assemble_tidy_dataset.py
scripts/assemble_tidy_dataset_stages/: _010_download_bam_files.py  _015_reheader_bam_files_in_place.py  _015_reheader_bam_files_with_proper_tabs.py  _020_bam_to_fastq.py  _030_fastq_to_fasta_consensi.py  _040_fasta_consensi_to_cag_tract_exons.py  _045_cag_tract_exons_to_cag_tracts.py  _050_multiple_fasta_to_single_multifasta.py  __init__.py
src/: __init__.py  scatter_same_coordinate_points.py
src/builders/: __init__.py  build_dataframe.py  build_deck_renderer.py  build_legend.py  build_minimum_sequence_identity_string.py
src/extractors/: __init__.py  exon_with_the_most_cag_repeats.py  extract_full_cag_tract.py  (+1 more)
test/: test_scatter_same_coordinate_points.py
(+53 files in other folders)
