[tool.poetry]
name = "androgen-receptor-clustering"
version = "0.1.0"
description = "'World map' of androgen receptor clusters (4654 genomes)"
authors = ["Anna Julia Engel <anna.julia.engel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pytest = "^7.1.2"
pydeck = "^0.7.1"

[tool.poetry.dev-dependencies]
ipython = "7.34"
pandas = "1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
