[tool.poetry]
name = "androgen-receptor-clusters-world-map"
version = "0.1.0"
description = "Many-against-many sequence searching on the protein of masculinity :muscle:"
authors = ["Anna Julia Engel <anna.julia.engel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydeck = "^0.7.1"
streamlit = "^1.11.0"
pandas = "1.3.5"
st-annotated-text = "^3.0.0"

[tool.poetry.dev-dependencies]
ipython = "7.34"
pytest = "^7.1.2"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
